--- a/frontend/src/app/views/pages/warehouse/product.component.html
+++ b/frontend/src/app/views/pages/warehouse/product.component.html
@@ -1,11 +1,132 @@
-<div class="card card-primary">
-    <div class="card-header">
-        <h3 class="card-title">Productos</h3>
-        <!-- /.card-tools -->
+<div class="row">
+    <div class="col-md-12">
+        <div class="card card-outline card-primary">
+            <div class="card-header">
+                <h3 class="card-title">Detalles del producto</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-plus"></i>
+                    </button>
+                </div>
+            </div>
+            <div class="card-body">
+                <form #myForm="ngForm">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label>Codigo <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" name="productCode"
+                                    [(ngModel)]="product.productCode" required>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Nombre de producto <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" name="name" [(ngModel)]="product.name" required>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label>Descripcion</label>
+                                <input type="text" class="form-control" name="description"
+                                    [(ngModel)]="product.description">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Precio de compra <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" name="pricePurchase"
+                                    [(ngModel)]="product.pricePurchase" required>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Precio de venta <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" name="priceSale" [(ngModel)]="product.priceSale"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label>Categoria</label>
+                                <!-- <select name="category">
+                                    <option value=""></option>
+                                    <option value=""></option>
+                                </select> -->
+                                <input type="text" class="form-control" name="category" [(ngModel)]="product.category">
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="card-footer">
+                <button type="submit" class="btn btn-info" (click)="clearProduct()"><span class="fas fa-broom"></span>
+                    Limpiar</button>
+                <button type="submit" class="btn btn-success float-right" (click)="showModal()"
+                    [disabled]="myForm.invalid"><span class="fas fa-plus"></span>
+                    Agregar producto a almacen</button>
+                <button type="submit" class="btn btn-primary float-right mr-1" (click)="createProduct()"
+                    [disabled]="myForm.invalid"><span class="fas fa-plus"></span>
+                    Solo agregar producto</button>
+            </div>
+        </div>
     </div>
-    <!-- /.card-header -->
-    <div class="card-body">
-        The body of the card
+    <div class="col-md-12">
+        <div class="card card-outline card-primary">
+            <div class="card-header">
+                <h3 class="card-title">Productos</h3>
+            </div>
+            <div class="card-body p-0 table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th style="width: 10px">#</th>
+                            <th>codigo</th>
+                            <th>Nombre</th>
+                            <th>Precio de compra</th>
+                            <th>Precio de venta</th>
+                            <th>Categoria</th>
+                            <th>Estado</th>
+                            <th>Option</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let prod of products; let i = index;">
+                            <td>{{i + 1}}</td>
+                            <td>{{prod.productCode}}</td>
+                            <td>{{prod.name}}</td>
+                            <td>{{prod.pricePurchase}}</td>
+                            <td>{{prod.priceSale}}</td>
+                            <td>{{prod.category?.name || 'No category'}}</td>
+                            <td>
+                                <span class="badge bg-success" *ngIf="prod.active">Activo</span>
+                                <span class="badge bg-danger" *ngIf="!prod.active">No activo</span>
+                            </td>
+                            <td>
+                                <button class="btn btn-outline-success btn-sm"><span
+                                        class="fas fa-edit"></span></button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
-    <!-- /.card-body -->
+</div>
+<div class="modal fade" id="modalWare" aria-modal="true">
+    <div class="modal-dialog">
+        <div class="modal-content bg-info">
+            <div class="modal-header">
+                <h4 class="modal-title">Info Modal</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span></button>
+            </div>
+            <div class="modal-body">
+                <p>One fine body…</p>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-outline-light" data-dismiss="modal">Cancelar</button>
+                <button type="button" class="btn btn-outline-light">Guardar</button>
+            </div>
+        </div>
+    </div>
 </div>
