--- a/frontend/src/app/views/pages/warehouse/product.component.html
+++ b/frontend/src/app/views/pages/warehouse/product.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-12">
-        <div class="card card-outline card-primary">
+        <div class="card card-outline card-primary" id="cardProduct">
             <div class="card-header">
                 <h3 class="card-title">Detalles del producto</h3>
                 <div class="card-tools">
@@ -15,7 +15,7 @@
                             <div class="form-group">
                                 <label>Codigo <i class="text-danger">*</i></label>
                                 <input type="text" class="form-control" name="productCode"
-                                    [(ngModel)]="product.productCode" required>
+                                    [(ngModel)]="product.productCode" required id="nameProduct">
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -48,25 +48,29 @@
                         <div class="col-md-4">
                             <div class="form-group">
                                 <label>Categoria</label>
-                                <!-- <select name="category">
-                                    <option value=""></option>
-                                    <option value=""></option>
-                                </select> -->
-                                <input type="text" class="form-control" name="category" [(ngModel)]="product.category">
+                                <select class="form-control" name="category" [(ngModel)]="product.category._id">
+                                    <option value="" disabled>Seleccione...</option>
+                                    <option *ngFor="let cat of categories" [value]="cat._id">{{cat.name}}</option>
+                                </select>
                             </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="card-footer">
-                <button type="submit" class="btn btn-info" (click)="clearProduct()"><span class="fas fa-broom"></span>
+                <button type="submit" class="btn btn-info" (click)="clearProduct()" *ngIf="!update"><span
+                        class="fas fa-broom"></span>
                     Limpiar</button>
+                <button class="btn btn-danger" *ngIf="update" (click)="btnCancel()"><span class="fas fa-times"></span> Cancelar</button>
                 <button type="submit" class="btn btn-success float-right" (click)="showModal()"
-                    [disabled]="myForm.invalid"><span class="fas fa-plus"></span>
+                    [disabled]="myForm.invalid" *ngIf="!update"><span class="fas fa-plus"></span>
                     Agregar producto a almacen</button>
                 <button type="submit" class="btn btn-primary float-right mr-1" (click)="createProduct()"
-                    [disabled]="myForm.invalid"><span class="fas fa-plus"></span>
+                    [disabled]="myForm.invalid" *ngIf="!update"><span class="fas fa-plus"></span>
                     Solo agregar producto</button>
+                <button class="btn btn-primary float-right" *ngIf="update" [disabled]="myForm.invalid"><span
+                        class="fas fa-check"></span>
+                    Actualizar</button>
             </div>
         </div>
     </div>
@@ -102,7 +106,7 @@
                                 <span class="badge bg-danger" *ngIf="!prod.active">No activo</span>
                             </td>
                             <td>
-                                <button class="btn btn-outline-success btn-sm"><span
+                                <button class="btn btn-outline-success btn-sm" (click)="btnEditProduct(prod)"><span
                                         class="fas fa-edit"></span></button>
                             </td>
                         </tr>
