--- a/frontend/src/app/views/pages/warehouse/category.component.html
+++ b/frontend/src/app/views/pages/warehouse/category.component.html
@@ -43,7 +43,11 @@
     <div class="col-md-8">
         <div class="card card-outline card-success">
             <div class="card-header">
-                <h3 class="card-title"> CAtegorias</h3>
+                <h3 class="card-title"> Categorias</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+                    </button>
+                </div>
             </div>
             <div class="card-body p-0 table-responsive">
                 <table class="table">
