--- a/frontend/src/app/views/pages/warehouse/product.component.html
+++ b/frontend/src/app/views/pages/warehouse/product.component.html
@@ -47,7 +47,8 @@
                         </div>
                         <div class="col-md-4">
                             <div class="form-group">
-                                <label>Categoria <i class="text-danger">*</i></label>
+                                <label>Categoria <i class="text-danger">* </i> <i class="fas fa-1x fa-sync-alt fa-spin"
+                                        *ngIf="!endLoandingCategories"></i></label>
                                 <select class="form-control" name="category" [(ngModel)]="product.category._id"
                                     required>
                                     <option value="" disabled>Seleccione...</option>
@@ -80,6 +81,10 @@
         <div class="card card-outline card-primary">
             <div class="card-header">
                 <h3 class="card-title">Productos</h3>
+                <div class="card-tools">
+                    <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+                    </button>
+                </div>
             </div>
             <div class="card-body p-0 table-responsive">
                 <table class="table">
