--- a/frontend/src/app/views/pages/warehouse/entry.component.html
+++ b/frontend/src/app/views/pages/warehouse/entry.component.html
@@ -1,1 +1,56 @@
-<p>entry works!</p>
+<div class="card card-outline card-primary">
+    <div class="card-header">
+        <h3 class="card-title"> Detalles de producto</h3>
+        <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+            </button>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="form-group input-group">
+                    <input type="text" class="form-control" placeholder="Codigo de producto" name="productCode"
+                        [(ngModel)]="productCode">
+                    <span class="input-group-append">
+                        <button type="button" class="btn btn-info btn-flat" (click)="getProductByCode()"><span
+                                class="fas fa-search"></span></button>
+                    </span>
+                </div>
+            </div>
+            <div class="col-md-6" *ngIf="resultProduct">
+                <div class="callout callout-danger">
+                    <h5>{{product.name}}</h5>
+                    <p>{{product.priceSale | currency: 'S/.'}}</p>
+                    <p>{{product.createdAt | date: 'short'}}</p>
+                </div>
+            </div>
+            <div class="col-md-6" *ngIf="resultProduct">
+                <div class="card card-outline card-success">
+                    <div class="card-header">
+                        <h3 class="card-title"> Almacen</h3>
+                    </div>
+                    <div class="card-body">
+                        <form #formProductWareHose="ngForm">
+                            <div class="form-group">
+                                <label> Almacen <i class="text-danger">*</i></label>
+                                <select name="warehouse" class="form-control" required>
+                                    <option value="">1</option>
+                                    <option value="">1</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label> CAntidad <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" required>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="card-footer">
+                        <button class="btn btn-danger"><span class="fas fa-times"></span> Cancelar</button>
+                        <button class="btn btn-primary float-right" [disabled]="formProductWareHose.invalid"><span class="fas fa-save"></span> Guardar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
