--- a/frontend/src/app/views/pages/warehouse/entry.component.html
+++ b/frontend/src/app/views/pages/warehouse/entry.component.html
@@ -34,23 +34,59 @@
                         <form #formProductWareHose="ngForm">
                             <div class="form-group">
                                 <label> Almacen <i class="text-danger">*</i></label>
-                                <select name="warehouse" class="form-control" required>
-                                    <option value="">1</option>
-                                    <option value="">1</option>
+                                <select name="warehouse" class="form-control" [(ngModel)]="productW.warehouse._id"
+                                    required>
+                                    <option value="" disabled>Seleccione...</option>
+                                    <option *ngFor="let w of warehouses; let i = index;" [value]="w._id">{{w.name}}
+                                    </option>
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label> CAntidad <i class="text-danger">*</i></label>
-                                <input type="text" class="form-control" required>
+                                <label> Cantidad <i class="text-danger">*</i></label>
+                                <input type="text" class="form-control" name="quantity" [(ngModel)]="productW.quantity"
+                                    required>
                             </div>
                         </form>
                     </div>
                     <div class="card-footer">
                         <button class="btn btn-danger"><span class="fas fa-times"></span> Cancelar</button>
-                        <button class="btn btn-primary float-right" [disabled]="formProductWareHose.invalid"><span class="fas fa-save"></span> Guardar</button>
+                        <button class="btn btn-primary float-right" [disabled]="formProductWareHose.invalid"
+                            (click)="createProductW()"><span class="fas fa-save"></span> Guardar</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="card card-outline card-primary">
+    <div class="card-header">
+        <h3 class="card-title"> Entradas</h3>
+        <div class="card-tools">
+            <button type="button" class="btn btn-tool" data-card-widget="collapse"><i class="fas fa-minus"></i>
+            </button>
+        </div>
+    </div>
+    <div class="card-body p-0 table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th style="width: 10px">#</th>
+                    <th>Producto</th>
+                    <th>Almacen</th>
+                    <th>Cantidad</th>
+                    <th>Fecha</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let pw of productWs; let i = index;">
+                    <td>{{i + 1}}</td>
+                    <td>{{pw.product.name}}</td>
+                    <td>{{pw.warehouse.name}}</td>
+                    <td>{{pw.quantity}}</td>
+                    <td>{{pw.createdAt | date: 'short'}}</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
