--- a/frontend/src/app/views/pages/warehouse/category.component.html
+++ b/frontend/src/app/views/pages/warehouse/category.component.html
@@ -66,17 +66,24 @@
                             <td>{{cat.name}}</td>
                             <td>{{cat.description}}</td>
                             <td>
-                                <span class="badge bg-success" *ngIf="cat.active">Activo</span>
-                                <span class="badge bg-danger" *ngIf="!cat.active">No activo</span>
+                                <span class="float text-success" *ngIf="cat.active">
+                                    <i class="fas fa-check text-sm"></i>
+                                </span>
+                                <span class="float text-danger" *ngIf="!cat.active">
+                                    <i class="fas fa-times text-sm"></i>
+                                </span>
                             </td>
                             <td>
                                 <button class="btn btn-outline-success btn-sm" (click)="btnEditCategory(cat)"><span
                                         class="fas fa-edit"></span></button>
+                                <button class="btn btn-outline-danger btn-sm ml-1" (click)="deleteCategory(cat._id)"
+                                    *ngIf="cat.active"><span class="fas fa-trash"></span></button>
                             </td>
                         </tr>
                     </tbody>
                 </table>
             </div>
+            <div class="overlay" *ngIf="!endLoandingCategories"><i class="fas fa-2x fa-sync-alt fa-spin"></i></div>
         </div>
     </div>
 </div>
