--- a/frontend/src/app/views/pages/system/local.component.html
+++ b/frontend/src/app/views/pages/system/local.component.html
@@ -1,8 +1,9 @@
-<div class="card card-outline card-primary" *ngIf="!create && !update">
+<div class="card card-outline card-primary" *ngIf="!create && !update && !viewLocal">
     <div class="card-header">
         <h3 class="card-title">Detalles del local</h3>
         <div class="card-tools">
-            <button class="btn btn-primary" (click)="newLocal()"><span class="fas fa-plus"></span> Agregar local</button>
+            <button class="btn btn-primary" (click)="newLocal()"><span class="fas fa-plus"></span> Agregar
+                local</button>
         </div>
     </div>
     <div class="card-body p-0 table-responsive">
@@ -34,6 +35,8 @@
                     <td>
                         <button class="btn btn-outline-success btn-sm" (click)="editLocal(loc)"><span
                                 class="fas fa-edit"></span></button>
+                        <button class="btn btn-outline-primary btn-sm ml-1" (click)="selectLocal(loc)"><span
+                                class="fas fa-eye"></span></button>
                     </td>
                 </tr>
             </tbody>
@@ -64,5 +67,102 @@
         <button type="submit" class="btn btn-success float-right" (click)="createLocal()" *ngIf="create">Crear</button>
         <button type="submit" class="btn btn-success float-right" (click)="updateLocalById()"
             *ngIf="update">Actualizar</button>
+    </div>
+</div>
+
+<div class="card card-outline card-primary" *ngIf="viewLocal">
+    <div class="card-header">
+        <h3 class="card-title"> {{local.name}}</h3>
+        <div class="card-tools">
+            <button type="button" class="btn btn-primary" (click)="activateForm()"><i class="fas fa-user-plus"></i>
+                Agregar empleado
+            </button>
+        </div>
+    </div>
+    <div class="card-body p-0 table-responsive">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th style="width: 10px">#</th>
+                    <th>Nombre</th>
+                    <th>Fecha registro</th>
+                    <th>Estado</th>
+                    <th>Opciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let el of employeLocals; let i=index;">
+                    <td>{{i + 1}}</td>
+                    <td>{{el.employe.name}} {{el.employe.surname}}</td>
+                    <td>{{el.createdAt | date: 'short'}}</td>
+                    <td>
+                        <span class="float text-success" *ngIf="el.active">
+                            <i class="fas fa-check text-sm"></i>
+                        </span>
+                        <span class="float text-danger" *ngIf="!el.active">
+                            <i class="fas fa-times text-sm"></i>
+                        </span>
+                    </td>
+                    <td>
+                        <button class="btn btn-outline-success btn-sm"><span class="fas fa-edit"></span></button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="card-footer">
+        <button class="btn btn-outline-primary" (click)="closeCard()"><i class="fas fa-arrow-left"></i> Atras</button>
+    </div>
+</div>
+
+<div class="modal fade" id="modalForm" aria-modal="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="card card-outline card-success">
+                    <div class="card-header">
+                        <h3 class="card-title"> Asignar Empleado</h3>
+                    </div>
+                    <div class="card-body">
+                        <form role="form">
+                            <div class="input-group input-group-sm">
+                                <input type="text" name="dniEmploye" [(ngModel)]="dniEmploye" class="form-control"
+                                    placeholder="DNI">
+                                <span class="input-group-append">
+                                    <button type="button" class="btn btn-info btn-flat"
+                                        (click)="findEmployeByDni()"><span class="fas fa-search"></span></button>
+                                </span>
+                            </div>
+                            <div class="form-group">
+                                <label>Nombre</label>
+                                <input type="text" name="name" class="form-control" disabled [(ngModel)]="employe.name">
+                            </div>
+                            <div class="form-group">
+                                <label>Apellidos</label>
+                                <input type="text" name="surname" class="form-control" disabled
+                                    [(ngModel)]="employe.surname">
+                            </div>
+                            <div class="form-group">
+                                <label>rol</label>
+                                <input type="text" name="rol" class="form-control" disabled
+                                    [(ngModel)]="employe.rol.nameRol">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <pre>{{employeLocal | json}}</pre>
+            </div>
+            <div class="modal-footer justify-content-between">
+                <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fas fa-times"></i>
+                    Cerrar</button>
+                <button type="button" class="btn btn-primary" (click)="createEmployeLocal()"><i class="fas fa-save"></i>
+                    Guardar</button>
+            </div>
+        </div>
     </div>
 </div>
