--- a/frontend/src/app/views/pages/box/mi-caja.component.html
+++ b/frontend/src/app/views/pages/box/mi-caja.component.html
@@ -66,7 +66,7 @@
           <div class="form-group">
             <label> Precio de salida</label>
             <input type="number" name="endPrice" class="form-control" [(ngModel)]="box.endPrice"
-              [disabled]="!lastOpenBox.active">
+              disabled>
           </div>
           <div class="form-group">
             <label> Observacion</label>
